= SciViews News

== SciViews version 0.9-11

* path object is renamed filePath to avoid a clash with a path object in grid
  package. Related function path(), is.path(), as.path() are renamed accordingly
  filePath(), is.filePath() and as.filePath(). The print method is also adapted.
  

== SciViews version 0.9-10

* Import from data.table is eliminated. For now, `@:=` is the same as `@<-`.

* Temporary objects are now saved in SciViews:TempEnv instead of TempEnv.


== SciViews version 0.9-9

* Improvements to activate warnings regarding possible R traps: if
  warnPartialMatchArgs, warnPartialMatchAttr, or warnPartialMatchDollar options
  are not defined yet, they are set to TRUE when the packages loads.
  
* For a similar purpose, we would like to avoid using = in place of <- for
  assignation. So, the "=" function is redefined to display a warning when it
  is used and when warnAssignWithEqualSign option is set to TRUE (by default).
  The warning message also suggests it may be == erroneously written =.

* Many functions are added with more coherent names for graphics.


== SciViews version 0.9-8

* Several changes in character.R.

* Added the rwg.colors() function.


== SciViews version 0.9-7

* Small corrections in man pages.

* Partial argument matching for all(.names) in names(). Fixed.


== SciViews version 0.9-6

* Added further (misc) functions.

* New syntax using x@attr for attributes, plus := for replacement by reference
  inspired from data.table package, which Sciviews now imports too.


== SciViews version 0.9-5

* Added functions to homogenize function names for strings and files
  manipulations.
  

== SciViews version 0.9-4

* The gamma argument in hsv() function disappears in R 2.14.0. As a consequence,
  the same gamma argument is dropped from rwb.colors(), ryg.colors() and
  cwm.colors().


== SciViews version 0.9-3

* A bug in svd.pca() subfunction of pcomp.default() was corrected.


== SciViews version 0.9-2
